--- a/core/extension/package.json
+++ b/core/extension/package.json
@@ -17,7 +17,8 @@
     "docs": "",
     "lint": "",
     "test": "",
-    "generate": "node ./codeGen/generate-exports.js '[\"@itwin/core-frontend\",\"core/frontend\"] [\"@itwin/core-common\",\"core/common\"]'"
+    "extract-api": "npm run -s generate",
+    "generate": "node ./codeGen/generate-exports.js"
   },
   "keywords": [
     "Bentley",
