--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -76,8 +76,6 @@ jobs:
         displayName: Publish Pipeline Artifact - .updated.json
         condition: and(succeeded(), eq('${{ parameters.downloadCurrentBuildArtifacts }}', false))
 
-
-      # TODO: Replace subprocess.run with subprocess.Popen
       - task: PythonScript@0
         inputs:
           scriptSource: inline
@@ -130,29 +128,7 @@ jobs:
         displayName: Tag if new release
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
-      - powershell: Get-ChildItem -Path ${{ parameters.outputDir }} -recurse
-        displayName: Debug outputDir
-
-      - script: TYPE $(parameters.outputDir)\version.txt
-        displayName: Debug version file
-
-      # - script: |
-      #     CALL node -p "require('./core/backend/package.json').version" > tmp.txt
-      #     SET /p currentVersion= < tmp.txt
-      #     DEL tmp.txt
-      #     CALL npm view @itwin/core-backend@%currentVersion% >tmp.txt 2>&1
-      #     @REM IF %ERRORLEVEL%==0 (
-      #     @REM   ECHO %currentVersion% already exists
-      #     @REM ) ELSE (
-      #     ECHO Releasing %currentVersion%
-      #     ECHO ##vso[build.addbuildtag]iTwinJsDocsRelease
-      #     ECHO ##vso[build.updatebuildnumber]%currentVersion%
-      #     @REM )
-      #   displayName: Tag if new release
-      #   workingDirectory: ${{ parameters.workingDir }}
-      #   condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
-
-      # - publish: ${{ parameters.outputDir }}
-      #   artifact: DocsBuild
-      #   displayName: Publish Pipeline Artifact - DocsBuild
-      #   condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
+      - publish: ${{ parameters.outputDir }}
+        artifact: DocsBuild
+        displayName: Publish Pipeline Artifact - DocsBuild
+        condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
