--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -14,17 +14,17 @@ parameters:
 
 steps:
   - script: |
-      mkdir ${{ parameters.stagingDir }}/reference/
+      mkdir ${{ parameters.stagingDir }}\reference\
       echo Copying all reference files to staging
-      robocopy /E generated-docs/core/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/ui/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/presentation/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/domains/ ${{ parameters.stagingDir }}/reference/
+      robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
+      robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
+      robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
+      robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
       echo Copying extracted code to staging
-      mkdir ${{ parameters.stagingDir }}/extract/
-      robocopy /E generated-docs/extract/ ${{ parameters.stagingDir }}/extract/
+      mkdir ${{ parameters.stagingDir }}\extract\
+      robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
       echo Copying all files from \docs folder
-      robocopy /E docs/ ${{ parameters.stagingDir }}/
+      robocopy /E docs\ ${{ parameters.stagingDir }}\
     workingDirectory: ${{ parameters.workingDir }}
     displayName: Copy Reference files to Staging
     failOnStderr: false
