--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -17,12 +17,22 @@ steps:
       mkdir ${{ parameters.stagingDir }}\reference\
       echo Copying all reference files to staging
       robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+
       robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+
       robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+
       robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+
       echo Copying extracted code to staging
       mkdir ${{ parameters.stagingDir }}\extract\
       robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
+      if %errorlevel% GEQ 8 exit 1
+
       echo Copying all files from \docs folder
       robocopy /E docs\ ${{ parameters.stagingDir }}\
       if %errorlevel% GEQ 8 exit 1
