--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -87,11 +87,12 @@
     "sinon": "^9.0.2",
     "source-map-loader": "^4.0.0",
     "typescript": "~4.4.0",
-    "webpack": "^5.64.4"
+    "webpack": "^5.64.4",
+    "@itwin/ecschema-metadata": "workspace:*"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.7.0",
-    "@bentley/imodeljs-native": "3.4.18",
+    "@bentley/imodeljs-native": "3.4.19",
     "@itwin/object-storage-azure": "~1.4.0",
     "@itwin/cloud-agnostic-core": "~1.4.0",
     "@itwin/object-storage-core": "~1.4.0",
