--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -18,18 +18,18 @@ resources:
   pipelines:
   - pipeline: itwinjs-docs
     source: iTwin.js Docs - YAML
-    version: 3.5.0-dev.7
-    # trigger:
-    #   branches:
-    #     include:
-    #     - master
-    #     - release/*
-    #     - docs-release-pipeline
-    #     exclude:
-    #     - release/2*
-    #     - release/1*
-    #   tags:
-    #   - iTwinJsDocsRelease
+    # version: 20221017.23
+    trigger:
+      branches:
+        include:
+        - master
+        - release/*
+        - docs-release-pipeline
+        exclude:
+        - release/2*
+        - release/1*
+      tags:
+      - iTwinJsDocsRelease
   - pipeline: bemetalsmith-tests
     source: Bemetalsmith - Selenium Tests
 
