--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -11,8 +11,7 @@ jobs:
     variables:
       tempDocsLocation: $(Pipeline.Workspace)\itwinjs-docs\DocsBuild
     steps:
-      - script: 'ECHO ##vso[build.updatebuildnumber]$(resources.pipeline.itwinjs-docs.runName).$(Build.BuildNumber)'
-        displayName: Set build number
+
 
       - task: NodeTool@0
         displayName: Use Node 14
@@ -24,6 +23,18 @@ jobs:
         artifact: DocsBuild
         displayName: "Download itwinjs-docs artifacts"
 
+      - script: |
+          SET /p version=<$(Pipeline.Workspace)\itwinjs-core\public_build\version.txt
+          ECHO Releasing docs for %version%
+          ECHO ##vso[task.setvariable variable=itwinjs_version]%version%
+        displayName: Set build number
+
+      - task: DeleteFiles@1
+        displayName: "Delete version.txt"
+        inputs:
+          SourceFolder: '$(tempDocsLocation)\public_build'
+          Contents: version.txt
+
       - task: DownloadPipelineArtifact@2
         displayName: "Download Pipeline Artifact - Nuget Spec"
         inputs:
@@ -32,6 +43,7 @@ jobs:
           definition: 1830
           buildVersionToDownload: specific
           pipelineId: 1234689
+
 
       - task: qetza.replacetokens.replacetokens-task.replacetokens@3
         displayName: "Replace tokens in NugetPackage.nuspec"
@@ -42,7 +54,7 @@ jobs:
         displayName: Debug nuspec
 
       - task: DeleteFiles@1
-        displayName: "Delete landing page "
+        displayName: "Delete landing page"
         inputs:
           SourceFolder: '$(tempDocsLocation)\public_build'
           Contents: index.html
@@ -56,21 +68,22 @@ jobs:
         inputs:
           command: pack
           packagesToPack: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
-          versioningScheme: byBuildNumber
+          versioningScheme: byEnvVar
+          versionEnvVar: itwinjs_version
           configuration: Release
           packDestination: '$(Build.ArtifactStagingDirectory)'
 
-      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
-        displayName: 'Push package to Octopus'
-        inputs:
-          OctoConnectedServiceName: 'Prod Octopus'
-          Package: '$(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
-          Replace: false
+      # - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
+      #   displayName: 'Push package to Octopus'
+      #   inputs:
+      #     OctoConnectedServiceName: 'Prod Octopus'
+      #     Package: '$(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
+      #     Replace: false
 
-      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
-        displayName: '[DEPRECATED] Create Octopus Release: $(octopusProjectName)'
-        inputs:
-          OctoConnectedServiceName: 'Prod Octopus'
-          ProjectName: '$(octopusProjectName)'
-          ReleaseNumber: '$(Build.BuildNumber)'
-          AdditionalArguments: '--deploymenttimeout=01:00:00 --packageversion $(Build.BuildNumber)'
+      # - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
+      #   displayName: '[DEPRECATED] Create Octopus Release: $(octopusProjectName)'
+      #   inputs:
+      #     OctoConnectedServiceName: 'Prod Octopus'
+      #     ProjectName: '$(octopusProjectName)'
+      #     ReleaseNumber: '$(Build.BuildNumber)'
+      #     AdditionalArguments: '--deploymenttimeout=01:00:00 --packageversion $(Build.BuildNumber)'
