--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -10,7 +10,7 @@
 trigger: none
 pr: none
 
-name: $(Date:yyyyMMdd)_$(Rev:r)
+name: $(Date:yyyyMMdd).$(Rev:r)
 
 # Pull in artifacts
 
@@ -18,18 +18,18 @@ resources:
   pipelines:
   - pipeline: itwinjs-docs
     source: iTwin.js Docs - YAML
-    # version: 20221017.23
-    trigger:
-      branches:
-        include:
-        - master
-        - release/*
-        - docs-release-pipeline
-        exclude:
-        - release/2*
-        - release/1*
-      tags:
-      - iTwinJsDocsRelease
+    version: 20221017.30
+    # trigger:
+    #   branches:
+    #     include:
+    #     - master
+    #     - release/*
+    #     - docs-release-pipeline
+    #     exclude:
+    #     - release/2*
+    #     - release/1*
+    #   tags:
+    #   - iTwinJsDocsRelease
   - pipeline: bemetalsmith-tests
     source: Bemetalsmith - Selenium Tests
 
