use build id instead of counter

--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -22,76 +22,66 @@ jobs:
         displayName: Download itwinjs-docs artifact
 
       - script: |
-          REM SET /p version=<$(tempDocsLocation)\version.txt
-          SET version=3.0.0-dev.0
+          SET /p version=<$(tempDocsLocation)\version.txt
           ECHO Releasing docs for %version%
           ECHO ##vso[build.addbuildtag]%version%
-          ECHO ##vso[task.setvariable variable=DocsVersion]%version%
-        name: GetVersion
-        displayName: Get docs version
+          ECHO ##vso[build.updatebuildnumber]%buildNumber%_$(Build.BuildId)
+        displayName: Update build number
 
-      - script: |
-          SET buildNumber=$(DocsVersion)_%rev%
-          ECHO Setting build number to %buildNumber%
-          REM ECHO ##vso[build.updatebuildnumber]%buildNumber%
-        displayName: Set build number
-        env:
-          rev: $[counter($(DocsVersion), 0)]
+      - task: DeleteFiles@1
+        displayName: Delete version.txt
+        inputs:
+          SourceFolder: $(tempDocsLocation)
+          Contents: version.txt
 
-      # - task: DeleteFiles@1
-      #   displayName: Delete version.txt
-      #   inputs:
-      #     SourceFolder: $(tempDocsLocation)
-      #     Contents: version.txt
+      - task: DownloadPipelineArtifact@2
+        displayName: Download Pipeline Artifact - Nuget Spec
+        inputs:
+          buildType: specific
+          project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
+          definition: 1830
+          buildVersionToDownload: specific
+          pipelineId: 1234689
 
-      # - task: DownloadPipelineArtifact@2
-      #   displayName: Download Pipeline Artifact - Nuget Spec
-      #   inputs:
-      #     buildType: specific
-      #     project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
-      #     definition: 1830
-      #     buildVersionToDownload: specific
-      #     pipelineId: 1234689
+      - task: qetza.replacetokens.replacetokens-task.replacetokens@3
+        displayName: Replace tokens in NugetPackage.nuspec
+        inputs:
+          targetFiles: $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
 
-      # - task: qetza.replacetokens.replacetokens-task.replacetokens@3
-      #   displayName: Replace tokens in NugetPackage.nuspec
-      #   inputs:
-      #     targetFiles: $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
+      - script: type $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
+        displayName: Debug nuspec
 
-      # - script: type $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
-      #   displayName: Debug nuspec
+      - task: DeleteFiles@1
+        displayName: Delete landing page
+        inputs:
+          SourceFolder: $(tempDocsLocation)\public_build
+          Contents: index.html
 
-      # - task: DeleteFiles@1
-      #   displayName: Delete landing page
-      #   inputs:
-      #     SourceFolder: $(tempDocsLocation)\public_build
-      #     Contents: index.html
+      - task: NuGetToolInstaller@1
+        inputs:
+          versionSpec: 4.9.2
 
-      # - task: NuGetToolInstaller@1
-      #   inputs:
-      #     versionSpec: 4.9.2
+      - task: NuGetCommand@2
+        displayName: NuGet pack
+        inputs:
+          command: pack
+          packagesToPack: $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
+          versioningScheme: byEnvVar
+          versionEnvVar: Build.BuildNumber
+          configuration: Release
+          packDestination: $(Build.ArtifactStagingDirectory)
 
-      # - task: NuGetCommand@2
-      #   displayName: NuGet pack
-      #   inputs:
-      #     command: pack
-      #     packagesToPack: $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec
-      #     versioningScheme: byEnvVar
-      #     versionEnvVar: Build.BuildNumber
-      #     configuration: Release
-      #     packDestination: $(Build.ArtifactStagingDirectory)
+      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
+        displayName: Push package to Octopus
+        inputs:
+          OctoConnectedServiceName: Prod Octopus
+          Package: $(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg
+          Replace: false
 
-      # - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
-      #   displayName: Push package to Octopus
-      #   inputs:
-      #     OctoConnectedServiceName: Prod Octopus
-      #     Package: $(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg
-      #     Replace: false
-
-      # - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
-      #   displayName: Create Octopus Release
-      #   inputs:
-      #     OctoConnectedServiceName: Prod Octopus
-      #     ProjectName: $(octopusProjectName)
-      #     ReleaseNumber: $(Build.BuildNumber)
-      #     AdditionalArguments: --deploymenttimeout=01:00:00 --packageversion $(Build.BuildNumber)
+      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
+        displayName: Create Octopus Release
+        inputs:
+          OctoConnectedServiceName: Prod Octopus
+          ProjectName: $(octopusProjectName)
+          ReleaseNumber: $(Build.BuildNumber)
+          AdditionalArguments: --deploymenttimeout=01:00:00 --packageversion $(Build.BuildNumber)
