--- a/core/ecschema-locaters/package.json
+++ b/core/ecschema-locaters/package.json
@@ -55,7 +55,7 @@
   "dependencies": {
     "glob": "^7.1.2",
     "fs-extra": "^8.1.0",
-    "@xmldom/xmldom": "^0.7.0"
+    "@xmldom/xmldom": "~0.8.3"
   },
   "peerDependencies": {
     "@itwin/ecschema-metadata": "workspace:^3.5.0-dev.20"
