lock down docs build version

--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -19,18 +19,18 @@ resources:
   pipelines:
   - pipeline: itwinjs-docs
     source: iTwin.js Docs - YAML
-    # version: 20221017.30
-    trigger:
-      branches:
-        include:
-        - master
-        - release/*
-        - docs-release-pipeline
-        exclude:
-        - release/2*
-        - release/1*
-      tags:
-      - iTwinJsDocsRelease
+    version: 20221019.9
+    # trigger:
+    #   branches:
+    #     include:
+    #     - master
+    #     - release/*
+    #     - docs-release-pipeline
+    #     exclude:
+    #     - release/2*
+    #     - release/1*
+    #   tags:
+    #   - iTwinJsDocsRelease
   - pipeline: bemetalsmith-tests
     source: Bemetalsmith - Selenium Tests
   repositories:
