fix agent pools

--- a/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
+++ b/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
@@ -4,7 +4,8 @@ parameters:
 jobs:
 - job: UpdateDocsIndex
   pool:
-    name: ubuntu-latest
+    name: iModelTechCI
+    demands: Agent.OS -equals Windows_NT
 
   variables:
     group: ${{ parameters.variableGroup }}
