--- a/common/config/azure-pipelines/jobs/docs/validate-links.yaml
+++ b/common/config/azure-pipelines/jobs/docs/validate-links.yaml
@@ -9,7 +9,8 @@ parameters:
 jobs:
 - job: ValidateLinks_${{ parameters.env }}
   pool:
-    name: ubuntu-latest
+    name: iModelTechCI
+    demands: Agent.OS -equals Windows_NT
 
   variables:
     ${{ if eq(parameters.env, 'Development') }}:
