--- a/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
+++ b/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
@@ -4,8 +4,8 @@ parameters:
 jobs:
 - job: UpdateDocsIndex
   pool:
-    name: iModelTechCI
-    demands: Agent.OS -equals Windows_NT
+    vmImage: ubuntu-latest
+
 
   variables:
     group: ${{ parameters.variableGroup }}
@@ -21,6 +21,14 @@ jobs:
       sourcePath: $(bemetalsmithAlgoliaDir)
       filePattern: algolia.json
       secretTokens: AlgoliaApiKey:$(AlgoliaApiKey)
+
+  - task: qetza.replacetokens.replacetokens-task.replacetokens@3
+    displayName: Replace tokens in algolia.json
+    inputs:
+      targetFiles: $(bemetalsmithAlgoliaDir)/algolia.json
+      tokenPattern: custom
+      tokenPrefix: __
+      tokenSuffix: __
 
   - task: NodeTool@0
     displayName: Use node 12.15.x
