--- a/common/config/azure-pipelines/jobs/docs/validate-links.yaml
+++ b/common/config/azure-pipelines/jobs/docs/validate-links.yaml
@@ -9,8 +9,7 @@ parameters:
 jobs:
 - job: ValidateLinks_${{ parameters.env }}
   pool:
-    name: iModelTechCI
-    demands: Agent.OS -equals Windows_NT
+    vmImage: ubuntu-latest
 
   variables:
     ${{ if eq(parameters.env, 'Development') }}:
