--- a/extensions/map-layers-formats/package.json
+++ b/extensions/map-layers-formats/package.json
@@ -42,11 +42,13 @@
     "@itwin/core-frontend": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
     "@types/chai": "4.3.1",
+    "@types/chai-as-promised": "^7",
     "@types/google-protobuf": "~3.15.6",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^9.0.0",
     "@types/sinon-chai": "^3.2.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7",
     "eslint": "^7.11.0",
     "jsdom": "^19.0.0",
     "jsdom-global": "3.0.2",
